# convoys2

./: .buildinfo  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  afterwords.html  examples.html  genindex.html  index.html  introduction.html  model.html  motivation.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
_modules/: index.html
_modules/convoys/: export.html  multi.html  plotting.html  regression.html  single.html  utils.html
_sources/: index.rst.txt  introduction.rst.txt  model.rst.txt
docs/: conf.py  introduction.rst
docs/_build/doctrees/: afterwords.doctree  environment.pickle  examples.doctree  index.doctree  introduction.doctree  model.doctree  motivation.doctree
docs/_build/html/: .buildinfo  afterwords.html  examples.html  genindex.html  index.html  introduction.html  model.html  motivation.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/convoys/: multi.html  plotting.html  regression.html  single.html  utils.html
examples/: dob_violations.py  marriage.py
src/convoys/: export.py  multi.py  plotting.py  regression.py  single.py  utils.py
stubs/flaky/: __init__.pyi  flaky.pyi  flaky_pytest_plugin.pyi
tests/: conftest.py  test_convoys.py  test_export.py
